// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Breadcrumbs component Renders Breadcrumbs with all data 1`] = `
<div
  style={
    Object {
      "backgroundImage": "linear-gradient(90deg, #006298, #0085AD)",
    }
  }
>
  <div>
    <ul>
      <li>
        <a
          href="/"
          onClick={[Function]}
          style={
            Object {
              "color": "white",
            }
          }
        >
          <span
            aria-label="Home"
          >
            <svg
              fill="none"
              height="24"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
              />
              <polyline
                points="9 22 9 12 15 12 15 22"
              />
            </svg>
          </span>
        </a>
      </li>
      <li>
        <a
          href="/ELA"
          onClick={[Function]}
          style={
            Object {
              "color": "white",
              "paddingLeft": "20px",
              "textDecoration": "none",
            }
          }
        >
          <span
            aria-label="Subject"
          >
            ELA
          </span>
        </a>
        <style
          jsx={true}
        >
          
      * {
        margin: 0;
        padding: 0;
      }
      li {
        display: flex;
        align-items: center;
        height: 35px;
        overflow: hidden;
      }
      li:before {
        content: '';
        height: 32px;
        width: 32px;
        right: 20px;
        border-top: 3px solid #66a1c1;
        border-right: 3px solid #66a1c1;
        transform: rotate(45deg);
      }
    
        </style>
      </li>
      <li>
        <a
          href="/ELA/8"
          onClick={[Function]}
          style={
            Object {
              "color": "white",
              "paddingLeft": "20px",
              "textDecoration": "none",
            }
          }
        >
          <span
            aria-label="Grade"
          >
            8
          </span>
        </a>
        <style
          jsx={true}
        >
          
      * {
        margin: 0;
        padding: 0;
      }
      li {
        display: flex;
        align-items: center;
        height: 35px;
        overflow: hidden;
      }
      li:before {
        content: '';
        height: 32px;
        width: 32px;
        right: 20px;
        border-top: 3px solid #66a1c1;
        border-right: 3px solid #66a1c1;
        transform: rotate(45deg);
      }
    
        </style>
      </li>
      <li>
        <a
          href="/ELA/8/4"
          onClick={[Function]}
          style={
            Object {
              "color": "white",
              "paddingLeft": "20px",
              "textDecoration": "none",
            }
          }
        >
          <span
            aria-label="Claim"
          >
            4
          </span>
        </a>
        <style
          jsx={true}
        >
          
      * {
        margin: 0;
        padding: 0;
      }
      li {
        display: flex;
        align-items: center;
        height: 35px;
        overflow: hidden;
      }
      li:before {
        content: '';
        height: 32px;
        width: 32px;
        right: 20px;
        border-top: 3px solid #66a1c1;
        border-right: 3px solid #66a1c1;
        transform: rotate(45deg);
      }
    
        </style>
      </li>
      <li>
        <a
          href="/ELA/8/4/Target 1"
          onClick={[Function]}
          style={
            Object {
              "color": "white",
              "paddingLeft": "20px",
              "textDecoration": "none",
            }
          }
        >
          <span
            aria-label="Target"
          >
            Target 1
          </span>
        </a>
        <style
          jsx={true}
        >
          
      * {
        margin: 0;
        padding: 0;
      }
      li {
        display: flex;
        align-items: center;
        height: 35px;
        overflow: hidden;
      }
      li:before {
        content: '';
        height: 32px;
        width: 32px;
        right: 20px;
        border-top: 3px solid #66a1c1;
        border-right: 3px solid #66a1c1;
        transform: rotate(45deg);
      }
    
        </style>
      </li>
    </ul>
    <style
      jsx={true}
    >
      
      * {
        margin: 0;
        padding: 0;
      }
      div {
        opacity: 1;
      }
      div ul {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: center;
        align-items: center;
        list-style-type: none;
        overflow: auto;
      }
      div ul li {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 35px;
        height: 35px;
      }
    
    </style>
  </div>
</div>
`;

exports[`Storyshots Breadcrumbs component Renders Breadcrumbs without Data 1`] = `
<div
  style={
    Object {
      "backgroundImage": "linear-gradient(90deg, #006298, #0085AD)",
    }
  }
>
  <div>
    <ul>
      <li>
        <a
          href="/"
          onClick={[Function]}
          style={
            Object {
              "color": "white",
            }
          }
        >
          <span
            aria-label="Home"
          >
            <svg
              fill="none"
              height="24"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
              />
              <polyline
                points="9 22 9 12 15 12 15 22"
              />
            </svg>
          </span>
        </a>
      </li>
    </ul>
    <style
      jsx={true}
    >
      
      * {
        margin: 0;
        padding: 0;
      }
      div {
        opacity: 1;
      }
      div ul {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: center;
        align-items: center;
        list-style-type: none;
        overflow: auto;
      }
      div ul li {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 35px;
        height: 35px;
      }
    
    </style>
  </div>
</div>
`;

exports[`Storyshots Breadcrumbs component Renders a breadcrumb with subject data 1`] = `
<div
  style={
    Object {
      "backgroundImage": "linear-gradient(90deg, #006298, #0085AD)",
    }
  }
>
  <ul>
    <li>
      <a
        href="/ela"
        onClick={[Function]}
        style={
          Object {
            "color": "white",
            "paddingLeft": "20px",
            "textDecoration": "none",
          }
        }
      >
        <span
          aria-label="Subject"
        >
          ELA
        </span>
      </a>
      <style
        jsx={true}
      >
        
      * {
        margin: 0;
        padding: 0;
      }
      li {
        display: flex;
        align-items: center;
        height: 35px;
        overflow: hidden;
      }
      li:before {
        content: '';
        height: 32px;
        width: 32px;
        right: 20px;
        border-top: 3px solid #66a1c1;
        border-right: 3px solid #66a1c1;
        transform: rotate(45deg);
      }
    
      </style>
    </li>
  </ul>
</div>
`;
